fix: components code dialog overflow

--- a/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
+++ b/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
@@ -1,5 +1,5 @@
 .code {
-  @apply text-sm rounded !pl-5;
+  @apply text-sm rounded !pl-5 !py-6;
 }
 .code span {
     @apply leading-[1.63rem];
